--- a/quarto/differentiable_vector_calculus/scalar_functions.qmd
+++ b/quarto/differentiable_vector_calculus/scalar_functions.qmd
@@ -125,7 +125,7 @@ Then we can define an alternative method with just a single variable and use spl
 j(v) = j(v...)
 ```
 
-The we can call `j` with a vector or point:
+Then we can call `j` with a vector or point:
 
 
 ```{julia}
