--- a/quarto/differentiable_vector_calculus/vector_valued_functions.qmd
+++ b/quarto/differentiable_vector_calculus/vector_valued_functions.qmd
@@ -104,7 +104,7 @@ However,  we will use a different approach, as the component functions are not n
 In `Plots`, the command `plot(xs, ys)`, where, say, `xs=[x1, x2, ..., xn]` and `ys=[y1, y2, ..., yn]`, will make a connect-the-dot plot between corresponding pairs of points. As previously discussed, this can be used as an alternative to plotting a function through `plot(f, a, b)`: first make a set of $x$ values, say `xs=range(a, b, length=100)`; then the corresponding $y$ values, say `ys = f.(xs)`; and then plotting through `plot(xs, ys)`.
 
 
-Similarly, were a third vector, `zs`, for $z$ components used, `plot(xs, ys, zs)` will make a $3$-dimensional connect the dot plot
+Similarly, were a third vector, `zs`, for $z$ components used, `plot(xs, ys, zs)` will make a $3$-dimensional connect the dot plot.
 
 
 However, our representation of vector-valued functions naturally generates a vector of points: `[[x1,y1], [x2, y2], ..., [xn, yn]]`, as this comes from broadcasting `f` over some time values. That is, for a collection of time values, `ts` the command `f.(ts)` will produce a vector of points. (Technically a vector of vectors, but points if you identify the $2$-$d$ vectors as points.)
@@ -1247,7 +1247,7 @@ $$
 \kappa = (x'y''-x''y')/\|r'\|^3. \quad (r(t) =\langle x(t), y(t) \rangle)
 $$
 
-Curvature can also be defined as derivative of the tangent vector, $\hat{T}$, *when* the curve is parameterized by arc length, a topic still to be taken up.  The vector $\vec{r}'(t)$ is the direction of motion, whereas $\vec{r}''(t)$ indicates how fast and in what direction this is changing. For curves with little curve in them, the two will be nearly parallel and the cross product small (reflecting the presence of $\cos(\theta)$ in the definition). For "curvy" curves, $\vec{r}''$ will be in a direction opposite of $\vec{r}'$ to the $\cos(\theta)$ term in the cross product will be closer to $1$.
+Curvature can also be defined as derivative of the tangent vector, $\hat{T}$, *when* the curve is parameterized by arc length, a topic still to be taken up.  The vector $\vec{r}'(t)$ is the direction of motion, whereas $\vec{r}''(t)$ indicates how fast and in what direction this is changing. For curves with little curve in them, the two will be nearly parallel and the cross product small (reflecting the presence of $\sin(\theta)$ in the definition). For "curvy" curves, $\vec{r}''$ will be in a direction orthogonal of $\vec{r}'$ to the $\sin(\theta)$ term in the cross product will be closer to $1$.
 
 
 Let $\vec{r}(t) = k \cdot \langle \cos(t), \sin(t), 0 \rangle$. This will have curvature:
@@ -1728,7 +1728,7 @@ $$
 \begin{align*}
 \vec{0} &= (\vec{U}
 + a(\alpha' - \kappa) \sin(\alpha) \vec{U}
-+ a(\alpha' - \kappa) \cos(\alpha)\vec{V}) \times
+- a(\alpha' - \kappa) \cos(\alpha)\vec{V}) \times
 (\vec{U} \cos(\alpha) +  \vec{V} \sin(\alpha)) \\
 &= (\vec{U} \times \vec{V}) \sin(\alpha) +
 a(\alpha' - \kappa) \sin(\alpha) \vec{U} \times  \vec{V} \sin(\alpha) -
@@ -1762,7 +1762,7 @@ $$
 $$
 
 
-From this $\|\vec{B}(u)\| = |\cos(\alpha)\|$. But $1 = \|d\vec{B}/dv\| = \|d\vec{B}/du \| \cdot |du/dv|$ and $|dv/du|=|\cos(\alpha)|$ follows.
+From this $\|\vec{B}'(u)\| = |\cos(\alpha)|$. But $1 = \|d\vec{B}/dv\| = \|d\vec{B}/du \| \cdot |du/dv|$ and $|dv/du|=|\cos(\alpha)|$ follows.
 
 
 
@@ -2804,7 +2804,7 @@ What is the resulting curve?
 choices = [
 "An astroid of the form ``c \\langle \\cos^3(t), \\sin^3(t) \\rangle``",
 "An cubic parabola of the form ``\\langle ct^3, dt^2\\rangle``",
-"An ellipse of the form ``\\langle a\\cos(t), b\\sin(t)``",
+"An ellipse of the form ``\\langle a\\cos(t), b\\sin(t)\\rangle``",
 "A cyloid of the form ``c\\langle t + \\sin(t), 1 - \\cos(t)\\rangle``"
 ]
 answ = 1
